--- a/Resources/views/macros.html.twig
+++ b/Resources/views/macros.html.twig
@@ -1,3 +1,3 @@
-{% macro path(route) %}{{ path(route.name, route.merged) }}{% endmacro %}
+{% macro path(route) %}{{ path(route.name, route.merged) ~ route.hash }}{% endmacro %}
 
 {% macro trans(text, transDomain) %}{{ (transDomain is same as(false) ? text|raw : text|trans({}, transDomain)|raw) }}{% endmacro %}
