--- a/Resources/views/Menu/navbar-v3.html.twig
+++ b/Resources/views/Menu/navbar-v3.html.twig
@@ -2,7 +2,7 @@
 
 {% import 'HBMDatagridBundle::macros.html.twig' as dg %}
 
-{% set datagrid_menu_id = 'datagrid-'~random()~'-menu' %}
+{% set datagrid_id = 'datagrid-'~random() %}
 
 {% if datagrid.menu.show %}
   <nav class="navbar navbar-default datagrid-menu" role="navigation">
@@ -13,7 +13,7 @@
 				    <span class="highlight">{{ datagrid.pagination.numberTotal }}</span> {{ 'Einträge gesamt'|trans }}
 			    </span>
         {% endif %}
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#{{ datagrid_menu_id }}" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#{{ datagrid_id~'-navbar' }}" aria-expanded="false">
           <span class="sr-only">{{ 'Menü anzeigen'|trans }}</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -21,7 +21,7 @@
         </button>
       </div>
 
-      <div class="collapse navbar-collapse" id="{{ datagrid_menu_id }}">
+      <div class="collapse navbar-collapse" id="{{ datagrid_id~'-navbar' }}">
         {% if datagrid.menu.showRange %}
           <div class="navbar-text highlightable">
             {{ 'Einträge'|trans }}
@@ -48,8 +48,8 @@
               <ul class="dropdown-menu" role="menu">
                 {% for export in datagrid.menu.exportsSelection %}
                   <li>
-                    <a href="#" onclick="document.getElementById('{{ datagrid_menu_id~'-export-'~export }}').submit(); return false;" title="{{ 'Daten als :type exportieren'|trans({':type': export}) }}">{{ ':ext-Export'|trans({':ext': export|upper}) }}</a>
-                    <form id="{{ datagrid_menu_id~'-export-'~export }}" action="{{ dg.path(datagrid.menu.route) }}" method="post">
+                    <a href="#" onclick="document.getElementById('{{ datagrid_id~'-export-'~export }}').submit(); return false;" title="{{ 'Daten als :type exportieren'|trans({':type': export}) }}">{{ ':ext-Export'|trans({':ext': export|upper}) }}</a>
+                    <form id="{{ datagrid_id~'-export-'~export }}" action="{{ dg.path(datagrid.menu.route) }}" method="post">
                       <input type="hidden" name="export-type" value="{{ export }}" />
                     </form>
                   </li>
