--- a/Resources/views/Menu/navbar-v4.html.twig
+++ b/Resources/views/Menu/navbar-v4.html.twig
@@ -5,7 +5,7 @@
 {% set datagrid_id = 'datagrid-'~random() %}
 
 {% if datagrid.menu.show %}
-  <div class="datagrid-menu navbar navbar-light bg-light navbar-expand-sm mb-3">
+  <div class="datagrid-menu{{ dg.classes(datagrid, 'navbar') }}">
     <div class="datagrid-menu-header navbar-brand">
       {% if datagrid.menu.showHeader %}
         <div class="datagrid-menu-num highlightable">
@@ -40,27 +40,27 @@
             {% endif %}
           {% endfor %}
 
-          <button type="submit" class="btn btn-secondary btn-sm"> <span class="fa fa-search"></span> {{ 'Suchen'|trans }}</button>
+          <button type="submit" class="{{ dg.classesAndSize(datagrid, 'btn') }}"> <span class="{{ dg.icon(datagrid, 'search') }}"></span> {{ 'Suchen'|trans }}</button>
         </form>
       {% endif %}
 
       {% set datagrid_actions_classes = 'my-1 mx-1' %}
       <div class="datagrid-menu-actions d-flex flex-wrap justify-content-center align-items-center ml-sm-3 mt-3 mt-sm-0">
         {% if datagrid.menu.showExtended and datagrid.menu.routeExtended %}
-          <a class="btn btn-secondary btn-sm {{ datagrid_actions_classes }}" href="{{ dg.path(datagrid.menu.routeExtended) }}" title="{{ 'Erweiterte Felder ein-/ausblenden'|trans }}">
-            <span class="fa {{ datagrid.extended?'fa-compress':'fa-expand' }}"></span> {{ datagrid.extended?'Weniger'|trans:'Mehr'|trans }}
+          <a class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn') }}" href="{{ dg.path(datagrid.menu.routeExtended) }}" title="{{ 'Erweiterte Felder ein-/ausblenden'|trans }}">
+            <span class="{{ datagrid.extended ? dg.icon(datagrid, 'compress') : dg.icon(datagrid, 'expand') }}"></span> {{ datagrid.extended?'Weniger'|trans:'Mehr'|trans }}
           </a>
         {% endif %}
 
         {% if datagrid.menu.showReset and datagrid.menu.routeReset %}
-          <a class="btn btn-secondary btn-sm {{ datagrid_actions_classes }}" href="{{ dg.path(datagrid.menu.routeReset) }}" title="{{ 'Sortierung/Filter zurücksetzen'|trans }}">
-            <span class="fa fa-bolt"></span> {{ 'Reset'|trans }}
+          <a class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn') }}" href="{{ dg.path(datagrid.menu.routeReset) }}" title="{{ 'Sortierung/Filter zurücksetzen'|trans }}">
+            <span class="{{ dg.icon(datagrid, 'reset') }}"></span> {{ 'Reset'|trans }}
           </a>
         {% endif %}
 
         {% if datagrid.menu.showExport %}
-          <div class="btn-group" role="group">
-            <button class="btn btn-secondary btn-sm dropdown-toggle {{ datagrid_actions_classes }}" type="button" id="{{ datagrid_id~'-export' }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn-group') }}" role="group">
+            <button class="dropdown-toggle {{ dg.classes(datagrid, 'btn') }}" type="button" id="{{ datagrid_id~'-export' }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               {{ 'Export'|trans }}
             </button>
             <ul class="dropdown-menu" aria-labelledby="{{ datagrid_id~'-export' }}">
@@ -77,8 +77,8 @@
         {% endif %}
 
         {% if datagrid.menu.showMaxEntriesSelection %}
-          <div class="btn-group">
-            <button class="btn btn-secondary btn-sm dropdown-toggle {{ datagrid_actions_classes }}" type="button" id="{{ datagrid_id~'-maxentries' }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn-group') }}">
+            <button class="dropdown-toggle {{ dg.classes(datagrid, 'btn') }}" type="button" id="{{ datagrid_id~'-maxentries' }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               {{ datagrid.maxEntriesPerPage }} {{ 'Einträge'|trans }}
             </button>
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="{{ datagrid_id~'-maxentries' }}">
