--- a/Resources/views/Pagination/pagination.html.twig
+++ b/Resources/views/Pagination/pagination.html.twig
@@ -3,21 +3,22 @@
 {% import 'HBMDatagridBundle::macros.html.twig' as dg %}
 
 
-{% set classesPagination = 'pagination' %}
-{% set classesPaginationItem = '' %}
-{% set classesPaginationLink = '' %}
-{% set classesFirst = 'glyphicon glyphicon-fast-backward' %}
-{% set classesPrev = 'glyphicon glyphicon-step-backward' %}
-{% set classesNext = 'glyphicon glyphicon-step-forward' %}
-{% set classesLast = 'glyphicon glyphicon-fast-forward' %}
-{% if datagrid.bootstrap == 'v4' %}
-  {% set classesPagination = 'pagination justify-content-center' %}
-  {% set classesPaginationItem = 'page-item ' %}
-  {% set classesPaginationLink = 'page-link ' %}
-  {% set classesFirst = 'fa fa-fast-backward' %}
-  {% set classesPrev = 'fa fa-step-backward' %}
-  {% set classesNext = 'fa fa-step-forward' %}
-  {% set classesLast = 'fa fa-fast-forward' %}
+{% if datagrid.bootstrap['version'] == 'v4' %}
+  {% set classesPagination = dg.classesAndSize(datagrid, 'pagination')|trim %}
+  {% set classesPaginationItem = dg.classes(datagrid, 'page-item')|trim %}
+  {% set classesPaginationLink = dg.classes(datagrid, 'page-link')|trim %}
+  {% set classesFirst = dg.icon(datagrid, 'page-first') %}
+  {% set classesPrev = dg.icon(datagrid, 'page-prev') %}
+  {% set classesNext = dg.icon(datagrid, 'page-next') %}
+  {% set classesLast = dg.icon(datagrid, 'page-last') %}
+{% else %}
+  {% set classesPagination = 'pagination' %}
+  {% set classesPaginationItem = '' %}
+  {% set classesPaginationLink = '' %}
+  {% set classesFirst = 'glyphicon glyphicon-fast-backward' %}
+  {% set classesPrev = 'glyphicon glyphicon-step-backward' %}
+  {% set classesNext = 'glyphicon glyphicon-step-forward' %}
+  {% set classesLast = 'glyphicon glyphicon-fast-forward' %}
 {% endif %}
 
 
@@ -30,7 +31,7 @@
           <a class="{{ classesPaginationLink }}" href="{{ dg.path(pagination.linkFirst) }}" title="{{ 'Erste Seite'|trans }}"><span class="{{ classesFirst }}"></span></a>
         </li>
       {% elseif pagination.showFirst %}
-        <li class="{{ classesPaginationItem }}disabled">
+        <li class="{{ classesPaginationItem }} disabled">
           <span class="{{ classesPaginationLink }}"><span class="{{ classesFirst }}"></span></span>
         </li>
       {% endif %}
@@ -40,7 +41,7 @@
           <a class="{{ classesPaginationLink }}" href="{{ dg.path(pagination.linkPrev) }}" title="{{ 'Vorherige Seite'|trans }}"><span class="{{ classesPrev }}"></span></a>
         </li>
       {% elseif pagination.showPrev %}
-        <li class="{{ classesPaginationItem }}disabled">
+        <li class="{{ classesPaginationItem }} disabled">
           <span class="{{ classesPaginationLink }}"><span class="{{ classesPrev }}"></span></span>
         </li>
       {% endif %}
@@ -48,7 +49,7 @@
 
       {% for link in pagination.links %}
         {% if link.value == pagination.pageFrom and link.value > 1 and pagination.showSep %}
-          <li class="{{ classesPaginationItem }}disabled">
+          <li class="{{ classesPaginationItem }} disabled">
             <span class="{{ classesPaginationLink }}">...</span>
           </li>
         {% endif %}
@@ -58,13 +59,13 @@
             <a class="{{ classesPaginationLink }}" href="{{ dg.path(link) }}">{{ link.value }}</a>
           </li>
         {% else %}
-          <li class="{{ classesPaginationItem }}active">
+          <li class="{{ classesPaginationItem }} active">
             <span class="{{ classesPaginationLink }}">{{ link.value }}</span>
           </li>
         {% endif %}
 
         {% if link.value == pagination.pageThru and link.value < pagination.pageMax and pagination.showSep %}
-          <li class="{{ classesPaginationItem }}disabled">
+          <li class="{{ classesPaginationItem }} disabled">
             <span class="{{ classesPaginationLink }}">...</span>
           </li>
         {% endif %}
@@ -76,7 +77,7 @@
           <a class="{{ classesPaginationLink }}" href="{{ dg.path(pagination.linkNext) }}" title="{{ 'Nächste Seite'|trans }}"><span class="{{ classesNext }}"></span></a>
         </li>
       {% elseif pagination.showNext %}
-        <li class="{{ classesPaginationItem }}disabled">
+        <li class="{{ classesPaginationItem }} disabled">
           <span class="{{ classesPaginationLink }}"><span class="{{ classesNext }}"></span></span>
         </li>
       {% endif %}
@@ -86,7 +87,7 @@
           <a class="{{ classesPaginationLink }}" href="{{ dg.path(pagination.linkLast) }}" title="{{ 'Letzte Seite'|trans }}"><span class="{{ classesLast }}"></span></a>
         </li>
       {% elseif pagination.showLast %}
-        <li class="{{ classesPaginationItem }}disabled">
+        <li class="{{ classesPaginationItem }} disabled">
           <span class="{{ classesPaginationLink }}"><span class="{{ classesLast }}"></span></span>
         </li>
       {% endif %}
