Adjust bootstrap v4 changes.

--- a/Resources/views/Menu/search-fields/number.html.twig
+++ b/Resources/views/Menu/search-fields/number.html.twig
@@ -4,13 +4,15 @@
 
 
 {% if datagrid.bootstrap['version'] == 'v4' %}
-  {% set classes = 'my-1 mr-sm-2 ' ~ dg.classesAndSize(datagrid, 'input-group') %}
+  {% set classesGroup = 'my-1 mr-sm-2 ' ~ dg.classesAndSize(datagrid, 'input-group') %}
+  {% set classesAddon = 'input-group-prepend' %}
 {% else %}
-  {% set classes = 'input-group' %}
+  {% set classesGroup = 'input-group' %}
+  {% set classesAddon = 'input-group-addon' %}
 {% endif %}
 
 
-<div class="{{ classes }}">
-  <span class="input-group-addon">123</span>
+<div class="{{ classesGroup }}">
+  <span class="{{ classesAddon }}">123</span>
   <input type="text" class="form-control" placeholder="{{ dg.trans(searchField['label'], transDomain) }}" name="{{ searchKey }}" value="{{ datagrid.menu.searchValue(searchKey) }}">
 </div>
