Fix bootstrap markup.

--- a/Resources/views/Menu/search-fields/number.html.twig
+++ b/Resources/views/Menu/search-fields/number.html.twig
@@ -13,6 +13,6 @@
 
 
 <div class="{{ classesGroup }}">
-  <span class="{{ classesAddon }}">123</span>
+  <span class="{{ classesAddon }}"><span class="input-group-text">123</span></span>
   <input type="text" class="form-control" placeholder="{{ dg.trans(searchField['label'], transDomain) }}" name="{{ searchKey }}" value="{{ datagrid.menu.searchValue(searchKey) }}">
 </div>
