Adjust twig includes.

--- a/Resources/views/Datagrid/table-body.html.twig
+++ b/Resources/views/Datagrid/table-body.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain "HBMDatagridBundle" %}
+{% trans_default_domain 'HBMDatagridBundle' %}
 
 <tbody class="datagrid-table-body">
 {% for row, obj in datagrid.results %}
