--- a/Resources/views/Datagrid/table-cell.html.twig
+++ b/Resources/views/Datagrid/table-cell.html.twig
@@ -1,6 +1,6 @@
-{% trans_default_domain "HBMDatagridBundle" %}
+{% trans_default_domain 'HBMDatagridBundle' %}
 
-{% import 'HBMDatagridBundle::macros.html.twig' as dg %}
+{% import 'HBMDatagridBundle/macros.html.twig' as dg %}
 
 {% if cell.route %}
   <a href="{{ dg.path(cell.link(obj, column, row)) }}" {{ cell.attr('a')|raw }}>{{ cell.parseValue(obj, column, row)|raw }}</a>
