Fix twig includes.

--- a/Resources/views/Datagrid/table-head-th.html.twig
+++ b/Resources/views/Datagrid/table-head-th.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'HBMDatagridBundle' %}
 
-{% import 'HBMDatagridBundle/macros.html.twig' as dg %}
+{% import '@HBMDatagridBundle/macros.html.twig' as dg %}
 
 
 {% if datagrid.bootstrap['version'] == 'v4' %}
